# ToS

./: .gitignore  Cargo.toml  LICENSE  PROJECT.md  README.md  deny.toml  rustfmt.toml
.cargo/: config.toml
.github/workflows/: audit.yml  book.yml  ci.yml  release.yml
docs/book/: SUMMARY.md  book.toml
docs/book/src/: 03-sdl.md  04-protocol.md  05-adapters.md  06-cli.md  07-security.md  08-ops.md  SUMMARY.md  adapter-contract.md  architecture.md  design-goals.md  introduction.md  quickstart.md  reference.md  workspace.md
scripts/: audit.sh  cross.sh  make-deb.sh  tos.1
tos-adapters/json/: Cargo.toml
tos-adapters/json/src/: lib.rs
tos-adapters/mongodb/: Cargo.toml
tos-adapters/mongodb/src/: lib.rs
tos-adapters/mysql/: Cargo.toml
tos-adapters/mysql/src/: lib.rs
tos-adapters/postgres/: Cargo.toml
tos-adapters/postgres/src/: lib.rs
tos-adapters/redis/: Cargo.toml
tos-adapters/redis/src/: lib.rs
tos-adapters/sqlite/: Cargo.toml
tos-adapters/sqlite/src/: lib.rs
tos-adapters/txt/: Cargo.toml
tos-adapters/txt/src/: lib.rs
tos-adapters/yaml/: Cargo.toml
tos-adapters/yaml/src/: lib.rs
tos-cli/: Cargo.toml
tos-cli/src/: cmd.rs  daemon.rs  lib.rs  main.rs  schema.rs  uri.rs
tos-cli/tests/: cli_push_test.rs  cli_schema_test.rs  cli_topology_test.rs  uri_test.rs
tos-core/: Cargo.toml
tos-core/src/: error.rs  lib.rs  resolve.rs
tos-core/src/sdl/: infer.rs  mod.rs  parser.rs  schema.rs  serializer.rs  validator.rs
tos-core/src/types/: compound.rs  mod.rs  primitive.rs
tos-crypto/: Cargo.toml
tos-crypto/src/: encrypt.rs  error.rs  exchange.rs  hash.rs  identity.rs  kdf.rs  lib.rs  registry.rs  sign.rs
tos-crypto/src/cipher/: chacha20poly1305.rs  mod.rs  none.rs  xchacha20poly1305.rs
tos-crypto/src/kex/: ml_kem768.rs  mod.rs  x25519.rs  xwing.rs
tos-crypto/src/sig/: ed25519.rs  ml_dsa65.rs  mod.rs
tos-proto/: Cargo.toml
tos-proto/examples/: wire_capture.rs
tos-proto/src/: error.rs  handshake.rs  handshake_v2.rs  lib.rs  messages.rs  messages_v2.rs  quic.rs  runner.rs  session.rs  session_v2.rs  stream.rs  topology.rs  transport.rs  watch.rs
tos-wire/: Cargo.toml
tos-wire/src/: batch.rs  change.rs  error.rs  lib.rs  msgpack.rs  record.rs
