[workspace]
resolver = "2"
members = [
    "tos-core",
    "tos-wire",
    "tos-crypto",
    "tos-proto",
    "tos-adapters/postgres",
    "tos-adapters/mysql",
    "tos-adapters/sqlite",
    "tos-adapters/mongodb",
    "tos-adapters/redis",
    "tos-adapters/json",
    "tos-adapters/yaml",
    "tos-adapters/txt",
    "tos-cli",
]

[workspace.package]
edition = "2021"
rust-version = "1.75"
license = "Apache-2.0"
authors = ["OpceanAI <ag@opceanai.com>"]
repository = "https://github.com/opceanai/tos"
homepage = "https://opceanai.com"
version = "0.1.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["net", "io-util", "rt-multi-thread", "macros", "sync", "time", "fs"] }
futures = "0.3"
async-trait = "0.1"
bincode = "1.3"
rmp-serde = "1"
proptest = "1"
clap = { version = "4", features = ["derive"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
blake3 = "1"
chacha20poly1305 = "0.10"
x25519-dalek = { version = "2", features = ["static_secrets"] }
rand = "0.8"
hex = "0.4"
base64 = "0.22"
ml-kem = { version = "0.3", features = ["hazmat"] }
ml-dsa = { version = "0.1.0", features = ["rand_core"] }
rand_core = "0.10"
getrandom = { version = "0.4", features = ["sys_rng"] }
sha3 = "0.10"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
opt-level = 3

[profile.dev]
opt-level = 0
debug = 1
