[package]
name = "tos"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "ToS command-line interface"

[lib]
name = "tos_cli"
path = "src/lib.rs"

[[bin]]
name = "tos"
path = "src/main.rs"

[dependencies]
tos-core = { path = "../tos-core" }
tos-crypto = { path = "../tos-crypto" }
tos-wire = { path = "../tos-wire" }
tos-proto = { path = "../tos-proto" }
tos-adapter-json = { path = "../tos-adapters/json" }
tos-adapter-postgres = { path = "../tos-adapters/postgres" }
tos-adapter-redis = { path = "../tos-adapters/redis" }
tokio = { workspace = true }
futures = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
assert_cmd = "2"
