[package]
name = "tos-crypto"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "ToS cryptography: Ed25519 identity, BLAKE3, X25519 ECDH, ChaCha20-Poly1305"

[dependencies]
ed25519-dalek = { workspace = true }
blake3 = { workspace = true }
chacha20poly1305 = { workspace = true }
x25519-dalek = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["fs"] }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
tracing = { workspace = true }
hkdf = "0.12"
sha2 = "0.10"

[dev-dependencies]
proptest = { workspace = true }
