[package]
name = "tos-proto"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "ToS P2P protocol: handshake, stream, watch, topology"

[dependencies]
tos-core = { path = "../tos-core" }
tos-crypto = { path = "../tos-crypto" }
tos-wire = { path = "../tos-wire" }
ed25519-dalek = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
quinn = "0.11.9"
rcgen = "0.14.7"
getrandom = { version = "0.4", features = ["sys_rng"] }

[dev-dependencies]
ed25519-dalek = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
blake3 = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net", "io-util", "time", "sync"] }
