[package]
name = "tos-wire"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "ToS wire format: batch + change records (MessagePack, Arrow IPC)"

[dependencies]
tos-core = { path = "../tos-core" }
tos-crypto = { path = "../tos-crypto" }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
rmp-serde = { workspace = true }
thiserror = { workspace = true }
blake3 = { workspace = true }
tracing = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
