[package]
name = "tos-adapter-json"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "ToS adapter: JSON files (read+write)"

[dependencies]
tos-core = { path = "../../tos-core" }
tokio = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
async-stream = "0.3"
