[package]
name = "tos-adapter-postgres"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "ToS adapter: PostgreSQL (scaffold)"

[dependencies]
tos-core = { path = "../../tos-core" }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
