[package]
name = "tos-adapter-redis"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "ToS adapter: redis (scaffold)"

[dependencies]
tos-core = { path = "../../tos-core" }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
