[package]
name = "tos-adapter-sqlite"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "ToS adapter: sqlite (read+write)"

[dependencies]
tos-core = { path = "../../tos-core" }
tokio = { workspace = true }
futures = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
async-stream = "0.3"
rusqlite = { version = "0.32", features = ["bundled"] }
